force-app/main/default/objects/clofor_com_cfs__APIsConfig__c/clofor_com_cfs__APIsConfig__c.object-meta.xml
<CustomObject>
    <label>API Config</label>
    <nameField>
        <displayFormat>APIC-{000000}</displayFormat>
        <label>APIs Config ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>