force-app/main/default/objects/clofor_com_cfs__APIsConfig__c/fields/clofor_com_cfs__APIArchitecturalStyle__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__APIArchitecturalStyle__c</fullName>
    <label>API Architectural Style</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__APIArchitecturalStyle</valueSetName>
    </valueSet>
</CustomField>