force-app/main/default/objects/clofor_com_cfs__APIsConfig__c/fields/clofor_com_cfs__APIName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__APIName__c</fullName>
    <label>API Config Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>