force-app/main/default/objects/clofor_com_cfs__APIsConfig__c/fields/clofor_com_cfs__APIOutputFormat__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__APIOutputFormat__c</fullName>
    <label>API Output Format</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__APIDataOutputFormat</valueSetName>
    </valueSet>
</CustomField>