force-app/main/default/objects/clofor_com_cfs__APIsConfig__c/fields/clofor_com_cfs__Certificate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Certificate__c</fullName>
    <label>Certificate</label>
    <type>TextArea</type>
</CustomField>