force-app/main/default/objects/clofor_com_cfs__APIsConfig__c/fields/clofor_com_cfs__NamedCredentialsURL__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__NamedCredentialsURL__c</fullName>
    <label>Named Credentials URL</label>
    <type>Url</type>
</CustomField>