force-app/main/default/objects/clofor_com_cfs__APIsConfig__c/fields/clofor_com_cfs__TargetSystemAccessID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TargetSystemAccessID__c</fullName>
    <label>Target System Access ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>