force-app/main/default/objects/clofor_com_cfs__APIsConfig__c/fields/clofor_com_cfs__TargetSystemPassword__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TargetSystemPassword__c</fullName>
    <label>Target System Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>