force-app/main/default/objects/clofor_com_cfs__APIsConfig__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__Active__c</columns>
    <columns>clofor_com_cfs__APIName__c</columns>
    <columns>clofor_com_cfs__StartDate__c</columns>
    <columns>clofor_com_cfs__EndDate__c</columns>
    <columns>clofor_com_cfs__TargetSystemOwnerCompany__c</columns>
    <columns>clofor_com_cfs__TargetSystemName__c</columns>
    <columns>clofor_com_cfs__TargetSystemURL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>